--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-    <title>Tic-Tac-Teo</title>
+    <title>Tic-Tac-Teo-Game</title>
   </head>
   <body>
     <div class="board" id="board">
